<resources>
    <string name="app_name">Fatec Mobile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_settings">Settings</string>
    <string name="btentrar">Entrar</string>
    <string name="btlistarTodos">Listar Todos Usuarios</string>
    <string name="btlistarTodosTerceiros">Listar Todos Terceiros</string>
    <string name="btlistarParam">Listar Parametros dos Usuarios</string>
    <string name="btlistarParamTerceiros">Listar Parametros dos Terceiros</string>
    <string name="btpesquisar">Pesquisar Usuario</string>
    <string name="btpesquisarTerceiros">Pesquisar Terceiros</string>
    <string name="btinserir">Inserir</string>
    <string name="btalterar">Alterar</string>
    <string name="btexcluir">Excluir</string>
    <string name="btnovousu">Novo Usuario</string>
    <string name="btnovoter">Novo Terceiro</string>
    <string name="btsalvar">Salvar</string>
    <string name="lblogin">Login</string>
    <string name="lbsenha">Senha</string>
    <string name="lbtipo">Tipo</string>
    <string name="lbstatus">Status</string>
    <string name="lbid">Id</string>

    //terceiros
    <string name="lbnome">Nome</string>
    <string name="lbdatanascimento">Data de Nascimento</string>
    <string name="lbcpf">CPF</string>
    <string name="lbgenero">Genero</string>
    <string name="lbendereco">Endereco</string>
    <string name="lbtelefone">Telefone</string>
    <string name="lbemail">Email</string>
    <string name="btinserirterceiro">Inserir Terceiro</string>


    <string name="lbusuariologado">Usuario Logado</string>
    <string name="lbvazio1"></string>
    <string name="lbvazio2"></string>
    <string name="title_activity_add_usu">AddUsuActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_list_usu">ListUsuActivity</string>
    <string name="title_activity_upt_usu">UptUsuActivity</string>
    <string name="title_activity_list_usu_param">ListUsuParamActivity</string>
    <string name="title_activity_add_terceiro">AddTerceiroActivity</string>
    <string name="title_activity_list_terceiro">ListTerceiroActivity</string>
    <string name="title_activity_list_terceiro_param">ListTerceiroParamActivity</string>
    <string name="title_activity_upt_terceiro">UptTerceiroActivity</string>
</resources>